test/expected/explain_hll.out
explain short long long x
        ^
9: error: "short long long" is illegal for built-in type
